@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class ListCommand {
    - InternshipList internshipList
    + ListCommand(Parser, InternshipList)
    + execute()
    + getCommandDescription()
    + getFlagDescription()
}

class Command {
    # Ui ui
    # Parser parser
    + Command()
    + Command(Parser)
    + execute()
    # getCommandDescription()
    # getFlagDescription()
    # printHelp()
}

class InternshipList {
    - List<Internship> internships
    + getInternships()
    + getSize()
    + get(index)
    + add(Internship)
    + delete(index)
}

class Internship {
    - String title
    - String companyName
    - ApplicationStatus status
    + getTitle()
    + getCompanyName()
    + toString()
}

ListCommand --|> Command
ListCommand --> InternshipList
InternshipList o--> Internship
@enduml
